--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>Avnish Singh</title>
-  <link rel="stylesheet" href="/CSS/styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
   <link rel="icon" href="Favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="/Images/cloud.png" alt="cloud" />
+    <img class="top-cloud" src="Images/cloud.png" alt="cloud" />
     <h1>I'm Avnish.</h1>
     <h2>A learner.</h2>
-    <img class="bottom-cloud" src="/Images/cloud.png" alt="cloud" />
+    <img class="bottom-cloud" src="Images/cloud.png" alt="cloud" />
     <img src="/Images/mountain.png" alt="mountian" />
   </div>
   <div class="middle-container">
@@ -27,12 +27,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="ml" src="/Images/ml.png" alt="ML">
+        <img class="ml" src="Images/ml.png" alt="ML">
         <h3>Machine Learning</h3>
         <p>Interested in the application of Machine Learning and AI in the field of Engineering for the betterment of mankind.</p>
       </div>
       <div class="skill-row">
-        <img class="web-dev" src="/Images/web dev.png" alt="WebDev">
+        <img class="web-dev" src="Images/web dev.png" alt="WebDev">
         <h3>Web Development</h3>
         <p>A newbie ready to explore the field and open to all sorts of interesting real world challenges.</p>
       </div>
