Update2 index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>I'm Avnish.</h1>
     <h2>A learner.</h2>
     <img class="bottom-cloud" src="Images/cloud.png" alt="cloud" />
-    <img src="/Images/mountain.png" alt="mountian" />
+    <img src="Images/mountain.png" alt="mountian" />
   </div>
   <div class="middle-container">
     <div class="profile">
